# remote_cli

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cli_commands.cpp  cli_commands.hpp  lookup_table.hpp  main.cpp  modbus_registers.cpp  modbus_registers.h  nanomodbus.h  struct.h
